# neural-nets-cpp

./: CMakeLists.txt  README.md  main.cpp  paper.md  xor.cpp  xor.md
MNIST-try/: mnist.cpp  mnist_test.cpp
examples/: simple_net.cpp  xor.cpp
examples/MNIST-try/: mnist.cpp  mnist_test.cpp
google_test/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
matrix/: matrix.cpp  matrix.h  matrix_double.cpp  matrix_double.h  matrix_vector_operations.h
neural_net/: layer.cpp  layer.h  linear_layer.h  neural_net.cpp  neural_net.h
task1/: excercise1.cpp
